@@ -15,7 +15,7 @@ if ( $@ ) {
     plan skip_all => "DBD::SQLite could not be used - no database to test with. ($error)";
 }
 
-plan tests => 27;
+plan tests => 28;
 
 Wiki::Toolkit::Setup::SQLite::setup( { dbname => "t/node.db" } );
 my $config = OpenGuides::Test->make_basic_config;
@@ -24,6 +24,7 @@ $config->script_name( "mywiki.cgi" );
 $config->site_name( "Wiki::Toolkit Test Site" );
 $config->default_city( "London" );
 $config->default_country( "United Kingdom" );
+$config->geo_handler( 3 );
 
 eval { require Wiki::Toolkit::Search::Plucene; };
 if ( $@ ) { $config->use_plucene ( 0 ) };
@@ -44,6 +45,22 @@ is( $@, "", "'new' doesn't croak if wiki and config objects supplied" );
 isa_ok( $rdf_writer, "OpenGuides::RDF" );
 
 # Test the data for a node that exists.
+OpenGuides::Test->write_data(
+        guide              => $guide,
+        node               => "Calthorpe Arms",
+        content            => "CAMRA-approved pub near King's Cross",
+        comment            => "Stub page, please update!",
+        username           => "Anonymous",
+        postcode           => "WC1X 8JR",
+        locales            => "Bloomsbury\r\nSt Pancras",
+        phone              => "test phone number",
+        website            => "test website",
+        hours_text         => "test hours",
+        latitude           => "51.524193",
+        longitude          => "-0.114436",
+        summary            => "a really nice pub",
+);
+
 OpenGuides::Test->write_data(
         guide              => $guide,
         node               => "Calthorpe Arms",
@@ -83,8 +100,10 @@ like( $rdfxml,
 
 like( $rdfxml, qr|<foaf:Person rdf:ID="Kake">|,
     "last username to edit used as contributor" );
+like( $rdfxml, qr|<foaf:Person rdf:ID="Anonymous">|,
+    "... as well as previous usernames" );
 
-like( $rdfxml, qr|<wiki:version>1</wiki:version>|, "version picked up" );
+like( $rdfxml, qr|<wiki:version>2</wiki:version>|, "version picked up" );
 
 like( $rdfxml, qr|<rdf:Description rdf:about="">|, "sets the 'about' correctly" );
 
